added bosses day

--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -19,6 +19,9 @@
             <h3 class="thumbnail"><a href="/mothers_day_items">Mother's Day Items<%= image_tag "mothers-day.jpg" %></a></h3>
         </div>
         <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3 class="thumbnail"><a href="/st_patricks_day_items">St Patrick's Day<%= image_tag "st-patricks-day.jpg" %></a></h3>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
             <h3 class="thumbnail"><a href="/fathers_day_items">Father's day<%= image_tag "fathers-day.jpg" %></a></h3>
         </div>
         <div class="col-md-3 col-sm-3 col-xs-12 bor">
@@ -28,19 +31,19 @@
             <h3 class="thumbnail"><a href="/independence_day_items">Independence Day<%= image_tag "independence-day.jpg" %></a></h3>
         </div>
         <div class="col-md-3 col-sm-3 col-xs-12 bor">
-            <h3 class="thumbnail"><a href="/st_patricks_day_items">St Patrick's Day<%= image_tag "st-patricks-day.jpg" %></a></h3>
+            <h3 class="thumbnail"><a href="/halloween_items">Halloween<%= image_tag "halloween.gif" %></a></h3>
         </div>
         <div class="col-md-3 col-sm-3 col-xs-12 bor">
             <h3 class="thumbnail"><a href="/new_years_items">New Years<%= image_tag "new-years.gif" %></a></h3>
-        </div>
-        <div class="col-md-3 col-sm-3 col-xs-12 bor">
-            <h3 class="thumbnail"><a href="/halloween_items">Halloween<%= image_tag "halloween.gif" %></a></h3>
         </div>
         <div class="col-md-3 col-sm-3 col-xs-12 bor">
             <h3 class="thumbnail"><a href="/professional_assistant_items">Professional Assistant's<%= image_tag "professional-assistant-day.jpg" %></a></h3>
         </div>
         <div class="col-md-3 col-sm-3 col-xs-12 bor">
             <h3 class="thumbnail"><a href="/teacher_appreciation_items">Teacher Appreciation<%= image_tag "teacher-appreciation.jpg" %></a></h3>
-        </div>   
+        </div>  
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3 class="thumbnail"><a href="/boss_day_items">Boss's Day<%= image_tag "boss-day.gif" %></a></h3>
+        </div> 
     </div>
 </div>
