--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -1,6 +1,9 @@
 <div class="container-fluid">
     <div class = "items">
         <div class="col-md-3 col-sm-3 col-xs-12 bor">
+            <h3 class="thumbnail"><a href="/corporate_items">Corporate Gift Ideas<%= image_tag "corporate.jpg" %></a></h3>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 bor">
             <h3 class="thumbnail"><a href="/christmas_items">Christmas Items<%= image_tag "merry-christmas.jpg" %></a></h3>
         </div>
         <div class="col-md-3 col-sm-3 col-xs-12 bor">
