--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,7 +10,7 @@
 
   <% @layouts.each do |layout| %>
   <% if layout.active? %>
-  <%= layout.photo_url %>
+  <img scr= "<%= layout.photo %>" >
   <% end %>
   <% end %>
       
