--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <div class="container-fluid">
-
+  <div>
+    <% @layouts.each do |l| %>
+    <% if l.active %>
+    <h1><img src= '<%= l.photo_url %>' ></h1>
+    <% end %>
+    <% end %>
+  </div>
       
   <div class="jumbotron">
     <%= image_tag "Sweet-street-logo.png" %>            
