--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,7 +10,7 @@
   <div>
     <% @layouts.each do |l| %>
     <% if l.active %>
-    <h1><img src= '<%= l.photo_url %>' height="50" width="auto" ></h1>
+    <h1><img src= '<%= l.photo_url %>' height="80" width="100%" ></h1>
     <% end %>
     <% end %>
   </div>
