--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -1,5 +1,5 @@
 <div class= "container-fluid">
   <% @layouts.each do |l| %>
-  <span><a href="/layouts/<%= l.id %>/edit" ><img scr= "<%= l.photo %>" ></a></span>
+  <p><a href="/layouts/<%= l.id %>/edit" ><img scr= "<%= l.photo %>" ></a></p>
   <% end %>
 </div>
