trying to see if layouts works

--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -1,4 +1,5 @@
 <div class= "container-fluid">
+  <h1>Hello World</h1>
   <% @layouts.each do |l| %>
   <p><a href="/layouts/<%= l.id %>/edit" ><img scr= "<%= l.photo %>" ></a></p>
   <% end %>
