--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,7 +10,7 @@
   <div class= "banner">
     <% @layouts.each do |l| %>
     <% if l.active %>
-    <p><img src= '<%= l.photo_url %>' height="110" width="100%" ></p>
+    <p><img src= '<%= l.photo_url %>' height="10%" width="100%" ></p>
     <% end %>
     <% end %>
   </div>
