trying to change pics in slider

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -60,7 +60,7 @@
               </div>
 
               <div class="item">
-                <center><br><%= image_tag "Retro-Popcorn.png" %></center>
+                <center><br><%= image_tag "choc-drizzled" %></center>
               </div>
 
             </div>
