--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -35,7 +35,7 @@
                 <center><img src='<%= p.photo %>'  height="120" width="auto" class="thumbnail"></a></p></center>
               </div>
 
-            
+            <% end %>
 
             </div>
             <!-- Wrapper For Slides Ends -->
