--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -26,7 +26,7 @@
             <div class="carousel-inner">
 
               <div class="item active">
-                <center><a href="/popcorn_flavors"><p>Popcorn Flavors<%= image_tag "Chocolate-Popcorn-Tin2.png" %></a></center>                
+                <center><a href="/popcorn_flavors"><p>Popcorn Flavors<%= image_tag "Chocolate-Popcorn-Tin2.png" %></p></a></center>                
               </div>
               <!-- 473 -->
                <% @products.each do |p| %>
