added address and phone to modal

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,6 +75,8 @@
                Saturday   10am - 8pm<br>
                Sunday     Noon - 5pm
               </div>
+              <p>Address: 592 William R Latham Senior Dr, Bourbonnais, IL 60914</p>
+              <p>Phone: (815) 932-4010</p>
               <div class="modal-footer">
               <p class="modalFoot">"We Make Sweet Memories!"</p>
 
