--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,7 +74,7 @@
                Friday     10am - 8pm<br>
                Saturday   10am - 8pm<br>
                Sunday     Noon - 5pm
-              </div>
+              </div><br><br><br>
               <p>Address: 592 William R Latham Senior Dr, Bourbonnais, IL 60914</p>
               <p>Phone: (815) 932-4010</p>
               <div class="modal-footer">
