centered the rest in modal

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,10 +75,10 @@
                Saturday   10am - 8pm<br>
                Sunday     Noon - 5pm
               </div><br><br><br>
-              <center><p>Address: 592 William R Latham Senior Dr, Bourbonnais, IL 60914</p></center>
+              <center><p>Address: 592 William R Latham Senior Dr, Bourbonnais, IL 60914</p>
               <p>Phone: (815) 932-4010</p>
               <div class="modal-footer">
-              <p class="modalFoot">"We Make Sweet Memories!"</p>
+              <p class="modalFoot">"We Make Sweet Memories!"</p></center>
 
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
               </div>
