--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,9 +76,9 @@
                Sunday     Noon - 5pm
               </div><br><br><br>
               <center><p>Address: 592 William R Latham Senior Dr, Bourbonnais, IL 60914</p>
-              <p>Phone: (815) 932-4010</p>
+              <p>Phone: (815) 932-4010</p></center>
               <div class="modal-footer">
-              <p class="modalFoot">"We Make Sweet Memories!"</p></center>
+              <p class="modalFoot">"We Make Sweet Memories!"</p>
 
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
               </div>
