--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,7 +2,7 @@
 
 <h1><%= @product.name %></h1>
 
-<div class="img-thumbnail"><img src="<%= @product.photo %>" alt="Smiley face" > </div><button><a href="/">Return to Products</a></button><br />
+<div ><img src="<%= @product.photo %>" alt="Smiley face" class="thumbnail"> </div><button><a href="/">Return to Products</a></button><br />
 <h3><%= @product.description %></h3>
 
 </div>
