--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,7 +12,7 @@
   <br>
   <div class="field">
     <%= label_tag :city %><br />
-    <%= text_field_tag :city, @user.address, :city => true %>
+    <%= text_field_tag :city, @user.address, :required => true %>
   </div>
   <br>
   <div class="field">
