added clickable phone number

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,7 +74,7 @@
                Sunday     Noon - 5pm
               </div><br><br><br>
               <center><p>Address: 592 William R Latham Senior Dr, Bourbonnais, IL 60914</p>
-              <p>Phone: (815) 932-4010</p></center>
+              <p><a href="tel:+1-815-932-4010">Call 1-815-932-4010</a></p></center>
               <div class="modal-footer">
               <p class="modalFoot">"We Make Sweet Memories!"</p>
 
@@ -112,7 +112,9 @@
         </div>
           <!-- Paragraph -->
           <p class="pull-left">Copyright &copy; <%= Time.new.year %> Sweet Street 
-          <strong>"We Make Sweet Memories!"</strong></p>&nbsp;&nbsp;&nbsp;<span class="pictures">Take Pictures!</span>
+          <strong>"We Make Sweet Memories!"</strong></p>&nbsp;&nbsp;&nbsp;<span class="pictures">Take Pictures!</span>&nbsp;&nbsp;&nbsp;
+          <a href="https://www.facebook.com/sweetstreetcandy/?fref=ts" target="_blank" class="facebook"><i class="glyphicon glyphicon-heart:before ">FaceBook</i></a>
+          
             <!-- List -->
           <ul class="list-inline pull-right">
             <% if user_signed_in? && current_user.ws_cust? %>
