--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,8 +112,8 @@
         </div>
           <!-- Paragraph -->
           <p class="pull-left">Copyright &copy; <%= Time.new.year %> Sweet Street 
-          <strong>"We Make Sweet Memories!"</strong></p>&nbsp;&nbsp;&nbsp;<span class="pictures">Take Pictures!</span>&nbsp;&nbsp;&nbsp;
-          <a href="https://www.facebook.com/sweetstreetcandy/?fref=ts" target="_blank" class="facebook"><i class="glyphicon glyphicon-heart:before ">FaceBook</i></a>
+          <strong>"We Make Sweet Memories!"</strong></p>&nbsp;&nbsp;&nbsp;
+          <a target="_blank" title="find us on Facebook" href="http://www.facebook.com/sweetstreetcandy/?fref=ts"><img alt="follow me on facebook" src="//login.create.net/images/icons/user/facebook_30x30.png" border=0>  Like us on Facebook!</a>
           
             <!-- List -->
           <ul class="list-inline pull-right">
