--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -114,7 +114,7 @@
           <p class="pull-left">Copyright &copy; <%= Time.new.year %> Sweet Street 
           <strong>"We Make Sweet Memories!"</strong></p>&nbsp;&nbsp;&nbsp;
           <a target="_blank" title="find us on Facebook" href="http://www.facebook.com/sweetstreetcandy/?fref=ts"><img alt="follow me on facebook" src="//login.create.net/images/icons/user/facebook_30x30.png" border=0>  Like us on Facebook!</a>&nbsp;&nbsp;
-          <span>Site by <a href="http://robertelroy.com" target="_blank" >Robert Elroy</a><a href="http://anyonecanlearntocode.com" target="_blank" class="color"> ACLTC</a></span>
+          <span>Site created by <a href="http://robertelroy.com" target="_blank" >Robert Elroy</a><a href="http://anyonecanlearntocode.com" target="_blank" class="color"> ACLTC</a></span>
           
             <!-- List -->
           <ul class="list-inline pull-right">
