took out non linking phone number

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Hours of Operation ------------ Phone # 815-932-4010</h4>
+                <h4 class="modal-title" id="myModalLabel">Hours of Operation</h4>
               </div>
               <div class="modalLogo" >
                 <%= image_tag "Sweet-street-logo.png" %>
