correction of spelling

--- a/app/views/products/aboutus.html.erb
+++ b/app/views/products/aboutus.html.erb
@@ -13,5 +13,5 @@
       <h1>Candy</h1>
       <p>Over 500 varieties of Chocolates and Candies fill the store as well as Nostalgic Candy, "Retro" Sodas, Fudge, Truffles, Chocolate and Roasted Nuts, Sugar Free Choclates, Candies and Fudge, Mix and Match Candy, Jelly Belly's, Door County Coffees and Cocoas, Snack Mixes, Kid's Candy and fresh made Cotton Candy.</p>
       <p>Seasonal favorites are also available during the year and they include Tropical Sno Shaved Ice, Choclate Dipped Strawberries, Caramel Apples, Peanut Brittle, Divinity, and Marzipan.</p>
-      <p>Not to be forgotten are the Gift Baskets and Gift Boxes beautifully created and priced "just right" as well as Party Trays, Boxes of our Fine Chocolates, Plush, Balloons and Gifts, Treat bags for the kids, Leanin"Tree Greeting Cards and so much more!</p>
+      <p>Not to be forgotten are the Gift Baskets and Gift Boxes beautifully created and priced "just right" as well as Party Trays, Boxes of our Fine Chocolates, Plush, Balloons and Gifts, Treat bags for the kids, Leanin' Tree Greeting Cards and so much more!</p>
 </div>
