changed style on links tab when collapsed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,9 +20,9 @@
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar">–––</span>
-        <span class="icon-bar">–––</span>
-        <span class="icon-bar">–––</span>
+        <u><b><span class="icon-bar">LINKS</span></b></u>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/products">Home</a>
       <a class="navbar-brand" href="/popcorn_flavors">Popcorn Flavors</a>
