--- a/app/views/carted_products/edit.html.erb
+++ b/app/views/carted_products/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid" >
-<h1>Please edit your amount. Remember that each 1 is a multiple of <storng>50 bags!</strong></h1>
+<h1>Please edit your amount. Remember that each 1 is a multiple of <strong>50 bags!</strong></h1>
   <h4><%= @carted_product.ws_product.name %></h4>
 <%= form_for @carted_product do |f| -%>
   <td><%= f.label :sm_bag_qty %> <b><u>Price is for multiples of 50 bags!</u></b><br>
