--- a/app/views/ws_products/index.html.erb
+++ b/app/views/ws_products/index.html.erb
@@ -8,10 +8,10 @@
 
 <div class="carted_length">
   <% if @carted_products %>
-  <h3>Your total so far: <%= number_to_currency @order.total %></h3>
+  <h3>Your total so far: <%= number_to_currency @order.total %> for <%= @order.carted_products.count %></h3>
     <% if @order.carted_products %>
   <% @carted_products.each do |p| %>
-  <h5><button><a href="/carted_products/<%= p.id %>/edit">Edit</a></button>&nbsp;<a data-confirm="Are you sure?" data-method="delete" href="/carted_products/<%= p.id %>" rel="nofollow"><button class="glyphicon glyphicon-trash">&nbsp;Delete Product</button></a><%= p.ws_product.name %>&nbsp;- <%= p.sm_bag_qty * 50 %> bags
+  <h5><button><a href="/carted_products/<%= p.id %>/edit">Edit</a></button>&nbsp;<a data-confirm="Are you sure?" data-method="delete" href="/carted_products/<%= p.id %>" rel="nofollow"><button class="glyphicon glyphicon-trash">&nbsp;Delete Product</button></a><%= p.ws_product.name %>&nbsp;- <%= p.sm_bag_qty %> bags
   <% end %>
   <% end %>
     <center><button class="glyphicon glyphicon-shopping-cart"><a href="/orders/<%=@order.id %>">Go To Cart</a></button></center></h5>
