--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -62,10 +62,10 @@
         <% @products.each do |p| %>
         <div class="col-md-3 col-sm-3 col-xs-12 bor">
         <h4 class="product-header">
-          <a href="/products/<%=p.id%>"><%= p.name %></h4>
+          <center><a href="/products/<%=p.id%>"><%= p.name %></h4>
             
         <p class='img-thumbnail'><% if p.special? %>
-          <div class="special"><a href=""><%= image_tag "specials.png" %></a></a></div>
+          <div class="special"><a href=""><%= image_tag "specials.png" %></a></a></center></div>
             
             <% end %>
           <img src='<%= p.photo %>'  height="140" width="auto" class="thumbnail"></a></p>
