--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -65,10 +65,10 @@
           <center><a href="/products/<%=p.id%>"><%= p.name %></h4>
             
         <p class='img-thumbnail'><% if p.special? %>
-          <div class="special"><a href=""><%= image_tag "specials.png" %></a></a></div>
+          <div class="special"><a href=""><%= image_tag "specials.png" %></a></a></center></div>
             
             <% end %>
-          <img src='<%= p.photo %>'  height="140" width="auto" class="thumbnail"></a></p></center>
+          <center><img src='<%= p.photo %>'  height="140" width="auto" class="thumbnail"></a></p></center>
          
           <% if user_signed_in? && current_user.admin? %>
           <button><%= link_to 'EDIT Product', edit_product_path(p.id) %></button>
