added layouts edit button to admins

--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -8,6 +8,7 @@
 <button><a href="/ws_products/new">Add a Wholesale Popcorn Flavor</a></button>
 <button><a href="/ws_products">Edit or Delete a Wholesale Popcorn Flavor</a></button><br>
 <button><a href="/users">Edit a Users Information</a></button>
+<button><a href="/layouts">Edit a Layouts</a></button>
 
 
 <% end %>
