--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -7,7 +7,7 @@
     </div>
       <div class="panel-body">
         <%= f.label :active %>
-        <%= f.check_box :ws_cust, true, false %> MUST BE Checked to be active! Keep unchecked to make inactive.
+        <%= f.check_box :active, true, false %>
         
       </div>
   </div>
