fixed end mistake

--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -7,4 +7,5 @@
   <%= else %>
   <a href="/layouts/<%= l.id %>/edit" ><p><img src= '<%= l.photo_url %>' height="90" width="100%" ></p></a>
   <% end %>
+  <% end %>
 </div>
