added order history button for user view

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,7 +1,6 @@
 <div class = "container-fluid">
-  <h1>Here are your orders!</h1>
+  <h1>History of orders!</h1>
 
-  <h3>ORDER</h3>
   <% @orders.each do |order| %>  
   <table class="table table-striped table-bordered table-responsive">
    <thead>
