--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
-        
+        <li><a href="/tins">Popcorn Tins</a></li>
         <li><a href="/orders">Order History</a></li>
         <li><a href="/holidays">Holidays</a></li>
         <li><a href="/festivals">Festivals</a></li>
