--- a/app/views/popcorn_flavors/index.html.erb
+++ b/app/views/popcorn_flavors/index.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <div class="container-fluid">
+  <center><h1>Gourmet Popcorn Flavors</h1></center>
   <% if @popcorn_flavors %>
     <% @popcorn_flavors.each do |flavor| %>
   <div class="col-md-3 col-sm-3 col-xs-12 bor">
