added view pages info

--- a/app/views/tins/index.html.erb
+++ b/app/views/tins/index.html.erb
@@ -1,3 +1,19 @@
-<div class= "container-fluid" >
-<h1>Hello World</h1>
+<div class = "container-fluid" >
+  <h1>Gourmet Popcorn Tins</h1>
+
+  <% if user_signed_in? && current_user.admin? %> 
+    <button type="button" class="btn btn-success"><a href="/tins/new"><h5>ADD A NEW Popcorn Tin</h5></a></button>
+  <% end %>
+
+<% @tins.each do |item| %>
+  <div class="col-md-3 col-sm-3 col-xs-12 bor">
+    <p><%= item.name %></p>
+    <p><img src='<%= item.photo %>'  height="140" width="auto" class="thumbnail"></p>
+    <p><%= item.description %></p>
+    <% if user_signed_in? && current_user.admin? %>
+      <button><%= link_to 'EDIT Tin', edit_tin_path(item.id) %></button>
+      <a data-confirm="Are you sure?" data-method="delete" href="/tins/<%= item.id %>" rel="nofollow"><button type="button" class="btn btn-danger">Delete Tin</button></a>
+    <% end %>
+  </div>
+<% end %>
 </div>
