--- a/app/views/tins/index.html.erb
+++ b/app/views/tins/index.html.erb
@@ -4,7 +4,7 @@
   <% if user_signed_in? && current_user.admin? %> 
     <button type="button" class="btn btn-success"><a href="/tins/new"><h5>ADD A NEW Popcorn Tin</h5></a></button>
   <% end %>
-
+<% if @tins %>
 <% @tins.each do |item| %>
   <div class="col-md-3 col-sm-3 col-xs-12 bor">
     <p><%= item.name %></p>
@@ -13,6 +13,7 @@
     <% if user_signed_in? && current_user.admin? %>
       <button><%= link_to 'EDIT Tin', edit_tin_path(item.id) %></button>
       <a data-confirm="Are you sure?" data-method="delete" href="/tins/<%= item.id %>" rel="nofollow"><button type="button" class="btn btn-danger">Delete Tin</button></a>
+    <% end %>
     <% end %>
   </div>
 <% end %>
