trying to fix some minor issues

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -102,13 +102,13 @@
 </div><!-- /.container-fluid -->
 
 <%= yield %>
-
-<div class= "foot" >
-  <footer>
+<footer>
       <!-- Container -->
-    <div class="container-fluid">
+      <div class="container-fluid">
         <!-- Footer Content -->
+        <div>
         
+        </div>
           <!-- Paragraph -->
           <p class="pull-left">Copyright &copy; <%= Time.new.year %> Sweet Street 
           <strong>"We Make Sweet Memories!"</strong></p>&nbsp;&nbsp;&nbsp;
@@ -132,8 +132,9 @@
           </ul>
           <!-- Clearfix -->
           <div class="clearfix"></div>
-    </div>
-  </footer>
+      </div>
+    </footer>
+</body><br>
 </div>
-</body>
+</div>
 </html>
