--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,6 +1,6 @@
 <div class = "container-fluid">
   <h1>History of orders!</h1>
-
+  <% if @orders %>
   <% @orders.each do |order| %>  
   <table class="table table-striped table-bordered table-responsive">
    <thead>
@@ -24,6 +24,7 @@
         <td><%= number_to_currency order.sub_total %></td>
         <td><%= carted_product.ws_product.name %></td>
         <td><%= carted_product.sm_bag_qty %></td>
+    <% end %>
     <% end %>
   <% end %>
       </tr>
