--- a/app/views/tins/_form.html.erb
+++ b/app/views/tins/_form.html.erb
@@ -8,7 +8,7 @@
     </div>
       <div class="panel-body">
         <%= f.label :name %>
-        <%= f.text_field :name, :required => true %>
+        <%= f.text_field :name %>
       </div>
   </div>
   <div class="panel-heading">
@@ -27,7 +27,7 @@
     </div>
       <div class="panel-body">
         <%= f.label :description %>
-        <%= f.text_field :description, :required => true %>
+        <%= f.text_field :description %>
       </div>
   </div>
   </div>
