--- a/app/views/tins/_form.html.erb
+++ b/app/views/tins/_form.html.erb
@@ -29,6 +29,26 @@
         <%= f.label :description %>
         <%= f.text_field :description, :required => true %>
       </div>
+      <div class="panel-body">
+        <%= f.label :description %>
+        <%= f.text_field :description2 %>
+      </div>
+      <div class="panel-body">
+        <%= f.label :description %>
+        <%= f.text_field :description3 %>
+      </div>
+      <div class="panel-body">
+        <%= f.label :description %>
+        <%= f.text_field :description4 %>
+      </div>
+      <div class="panel-body">
+        <%= f.label :description %>
+        <%= f.text_field :description5 %>
+      </div>
+      <div class="panel-body">
+        <%= f.label :description %>
+        <%= f.text_field :description6 %>
+      </div>
   </div>
   </div>
   
