--- a/app/views/tins/index.html.erb
+++ b/app/views/tins/index.html.erb
@@ -7,9 +7,14 @@
 <% if @tins %>
 <% @tins.each do |item| %>
   <div class="col-md-3 col-sm-3 col-xs-12 bor">
-    <p><%= item.name %></p>
+    <h1><%= item.name %></h1>
     <p><img src='<%= item.photo %>'  height="140" width="auto" class="thumbnail"></p>
     <p><%= item.description %></p>
+    <p><%= item.description2 %></p>
+    <p><%= item.description3 %></p>
+    <p><%= item.description4 %></p>
+    <p><%= item.description5 %></p>
+    <p><%= item.description6 %></p>
     <% if user_signed_in? && current_user.admin? %>
       <button><%= link_to 'EDIT Tin', edit_tin_path(item.id) %></button>
       <a data-confirm="Are you sure?" data-method="delete" href="/tins/<%= item.id %>" rel="nofollow"><button type="button" class="btn btn-danger">Delete Tin</button></a>
