--- a/app/views/tins/_form.html.erb
+++ b/app/views/tins/_form.html.erb
@@ -49,6 +49,46 @@
         <%= f.label :description %>
         <%= f.text_field :description6 %>
       </div>
+      <div class="panel-body">
+        <%= f.label :description %>
+        <%= f.text_field :description7 %>
+      </div>
+      <div class="panel-body">
+        <%= f.label :description %>
+        <%= f.text_field :description8 %>
+      </div>
+      <div class="panel-body">
+        <%= f.label :description %>
+        <%= f.text_field :description9 %>
+      </div>
+      <div class="panel-body">
+        <%= f.label :description %>
+        <%= f.text_field :description10 %>
+      </div>
+      <div class="panel-body">
+        <%= f.label :description %>
+        <%= f.text_field :description11 %>
+      </div>
+      <div class="panel-body">
+        <%= f.label :description %>
+        <%= f.text_field :description12 %>
+      </div>
+      <div class="panel-body">
+        <%= f.label :description %>
+        <%= f.text_field :description13 %>
+      </div>
+      <div class="panel-body">
+        <%= f.label :description %>
+        <%= f.text_field :description14 %>
+      </div>
+      <div class="panel-body">
+        <%= f.label :description %>
+        <%= f.text_field :description15 %>
+      </div>
+      <div class="panel-body">
+        <%= f.label :description %>
+        <%= f.text_field :description16 %>
+      </div>
   </div>
   </div>
   
