--- a/app/views/tins/index.html.erb
+++ b/app/views/tins/index.html.erb
@@ -8,12 +8,22 @@
   <div class="col-md-3 col-sm-3 col-xs-12 bor">
     <h1><%= item.name %></h1>
     <p><img src='<%= item.photo %>'  height="140" width="auto" class="thumbnail"></p>
-    <h4><%= item.description %></h4>
-    <h4><%= item.description2 %></h4>
-    <h4><%= item.description3 %></h4>
-    <h4><%= item.description4 %></h4>
-    <h4><%= item.description5 %></h4>
-    <h4><%= item.description6 %></h4>
+    <p><%= item.description %></p>
+    <p><%= item.description2 %></p>
+    <p><%= item.description3 %></p>
+    <p><%= item.description4 %></p>
+    <p><%= item.description5 %></p>
+    <p><%= item.description6 %></p>
+    <p><%= item.description7 %></p>
+    <p><%= item.description8 %></p>
+    <p><%= item.description9 %></p>
+    <p><%= item.description10 %></p>
+    <p><%= item.description11 %></p>
+    <p><%= item.description12 %></p>
+    <p><%= item.description13 %></p>
+    <p><%= item.description14 %></p>
+    <p><%= item.description15 %></p>
+    <p><%= item.description16 %></p>
     <% if user_signed_in? && current_user.admin? %>
       <button><%= link_to 'EDIT Tin', edit_tin_path(item.id) %></button>
       <a data-confirm="Are you sure?" data-method="delete" href="/tins/<%= item.id %>" rel="nofollow"><button type="button" class="btn btn-danger">Delete Tin</button></a>
