--- a/app/views/tins/_form.html.erb
+++ b/app/views/tins/_form.html.erb
@@ -49,10 +49,10 @@
         <%= f.label :description %>
         <%= f.text_field :description6 %>
       </div>
-      <div class="panel-body">
-        <%= f.label :description %>
-        <%= f.text_field :description7 %>
-      </div>
+      <!-- <div class="panel-body"> -->
+        <%#= f.label :description %>
+        <%#= f.text_field :description7 %>
+      <!-- </div> -->
       <div class="panel-body">
         <%= f.label :description %>
         <%= f.text_field :description8 %>
