--- a/app/views/tins/index.html.erb
+++ b/app/views/tins/index.html.erb
@@ -14,7 +14,7 @@
     <p><%= item.description4 %></p>
     <p><%= item.description5 %></p>
     <p><%= item.description6 %></p>
-    <p><%= item.description7 %></p>
+    <!-- <p><%= item.description7 %></p> -->
     <p><%= item.description8 %></p>
     <p><%= item.description9 %></p>
     <p><%= item.description10 %></p>
