added bold to index tins

--- a/app/views/tins/index.html.erb
+++ b/app/views/tins/index.html.erb
@@ -13,11 +13,11 @@
     <p><%= item.description3 %></p>
     <p><%= item.description4 %></p>
     <p><%= item.description5 %></p>
-    <p><%= item.description6 %></p>
+    <b><p><%= item.description6 %></p></b>
     <!-- <p><%= item.description7 %></p> -->
     <p><%= item.description8 %></p>
     <p><%= item.description9 %></p>
-    <p><%= item.description10 %></p>
+    <b><p><%= item.description10 %></p></b>
     <p><%= item.description11 %></p>
     <p><%= item.description12 %></p>
     <p><%= item.description13 %></p>
