--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,9 @@
       
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/tins">Popcorn Tins</a></li>
+        <% if user_signed_in? && current_user.ws_cust? %>
         <li><a href="/orders">Order History</a></li>
+        <% end %>
         <li><a href="/holidays">Holidays</a></li>
         <li><a href="/festivals">Festivals</a></li>
         <li><a data-toggle="modal" data-target="#myModal" >
