--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -35,11 +35,12 @@
     <%= email_field_tag :email, @user.email, :required => true %>
   </div>
   <br>
-    
-    <div class="field">
+  <% if user_signed_in && current_user.admin? %>
+  <div class="field">
     <%= label_tag :Wholesale_Customer %><br />
     <%= check_box_tag :ws_cust, true, false %>  MUST BE Checked to be active! Keep unchecked to make inactive.
   </div>
+  <% end %>
    
   <br>
   <div class="actions">
