--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -120,7 +120,7 @@
             <!-- List -->
           <ul class="list-inline pull-right">
             <% if user_signed_in? && current_user.ws_cust? %>
-            <li><a href="/users/edit/<%= current_user.id %>">Update my Account Info</a></li>
+            <li><a href="/users/<%= current_user.id %>/edit">Update my Account Info</a></li>
             <% end %>
             <% if user_signed_in? && current_user.admin? %>
             <li><a href="/admins">Administration</a></li>
